tests/good/04_simple_string.src
# Test: String return
# Expected: Hello World
void main() {
    print_string("Hello World");
}
