tests/bad/18_invalid_operator.src
# Test: Invalid operator
void main() {
    return 5 ** 2;  # Invalid operator
}
